--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,25 @@
 *.xlsx
 *.pyc
 *.pyo
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
